Fix custom properties negation, align header

--- a/src/css/bundle.css
+++ b/src/css/bundle.css
@@ -10936,11 +10936,12 @@ input[type=time] {
 }
 
 .header__slot_logo {
-  padding-left: 1.3rem;
-  margin-left: -var(--main-x-pad);
+  padding-left: var(--main-x-pad);
+  margin-left: calc(-1 * var(--main-x-pad));
 }
 @media (min-width: 768px) {
   .header__slot_logo {
+    padding-left: 1.3rem;
     width: calc(216px + 1.1rem);
     flex: 0 0 auto;
   }
@@ -10959,7 +10960,7 @@ input[type=time] {
 
 .header__slot_actions {
   margin-left: auto;
-  margin-right: -var(--main-x-pad);
+  margin-right: calc(-1 * var(--main-x-pad));
 }
 @media (min-width: 490px) {
   .header__slot_actions {
@@ -11494,7 +11495,7 @@ input[type=time] {
 }
 
 .toolbar__main {
-  margin-left: -var(--main-x-pad);
+  margin-left: calc(-1 * var(--main-x-pad));
 }
 @media (min-width: 490px) {
   .toolbar__main {
@@ -11507,7 +11508,7 @@ input[type=time] {
   flex-wrap: nowrap;
   margin-left: auto;
   white-space: nowrap;
-  margin-right: -var(--main-x-pad);
+  margin-right: calc(-1 * var(--main-x-pad));
 }
 @media (min-width: 490px) {
   .toolbar__aside {
